--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ pytz==2020.1              # via pandas
 scipy==1.4.1              # via seaborn
 seaborn==0.10.1
 six==1.15.0               # via cycler, python-dateutil
+toolz == 0.11.1
+dill == 0.3.4
+partd == 1.2.0
+bokeh == 2.3.3
+dask == 2021.8.0
